--- a/src/components/Setup/SetupWizard.less
+++ b/src/components/Setup/SetupWizard.less
@@ -6,7 +6,7 @@
   background: linear-gradient(135deg, @gradient-start 0%, @gradient-via 50%, @gradient-end 100%);
   display: flex;
   align-items: center;
-  justify-center;
+  justify-content: center;
   z-index: 50;
 }
 
