feat: 🎸 汉化了一下

--- a/src/index.less
+++ b/src/index.less
@@ -192,6 +192,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 0.25rem;
     margin-bottom: 0.5rem;
   }
 
@@ -203,6 +205,7 @@ body {
 
   &-tags {
     display: flex;
+    flex-wrap: wrap;
     gap: 0.25rem;
   }
 
@@ -251,6 +254,7 @@ body {
 
   &-actions {
     display: flex;
+    flex-wrap: wrap;
     gap: 0.5rem;
   }
 
