--- a/src/components/Setup/SetupWizard.less
+++ b/src/components/Setup/SetupWizard.less
@@ -274,6 +274,23 @@
       opacity: 0.5;
     }
   }
+
+  &-text {
+    background: transparent;
+    color: @text-secondary;
+    font-size: 0.875rem;
+    padding: 0.5rem 1rem;
+
+    &:hover {
+      color: @text-primary;
+      background: rgba(255, 255, 255, 0.05);
+    }
+  }
+}
+
+.setup-footer-actions {
+  margin-top: 1.5rem;
+  text-align: center;
 }
 
 .setup-footer {
