style: 💄 修改了样式和 logo

--- a/src/App.less
+++ b/src/App.less
@@ -33,6 +33,15 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
+
+    button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 32px;
+      gap: 6px;
+      padding: 0 12px;
+    }
   }
 
   &.macos {
@@ -70,7 +79,7 @@
   border-radius: 0.375rem;
   cursor: pointer;
   transition: all 0.2s;
-  margin-right: 0.5rem;
+  margin-right: 0;
 
   &:hover {
     background: @border-color-hover;
