--- a/src/components/Settings/SettingsModal.less
+++ b/src/components/Settings/SettingsModal.less
@@ -198,30 +198,91 @@
 }
 
 .form-group-input-wrapper {
-  position: relative;
   display: flex;
-  align-items: center;
+  gap: 0.5rem;
 
   input {
-    padding-right: 2.5rem;
+    flex: 1;
   }
 }
 
 .form-group-toggle-btn {
-  position: absolute;
-  right: 0.5rem;
+  padding: 0.5rem;
   background: none;
-  border: none;
-  color: @text-tertiary;
+  border: 1px solid @border-color;
+  border-radius: 0.375rem;
   cursor: pointer;
-  padding: 0.25rem;
-  font-size: 1.2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  color: @text-secondary;
+  transition: all 0.2s;
 
   &:hover {
+    background: @bg-tertiary;
     color: @text-primary;
+  }
+}
+
+.storage-settings {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  width: 100%;
+}
+
+.setting-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background: @bg-tertiary;
+  border-radius: 0.5rem;
+  border: 1px solid @border-color;
+
+  .setting-info {
+    h3 {
+      font-size: 1rem;
+      font-weight: 600;
+      color: @text-primary;
+      margin-bottom: 0.25rem;
+    }
+
+    p {
+      font-size: 0.875rem;
+      color: @text-secondary;
+      margin: 0;
+    }
+  }
+
+  button {
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.375rem;
+    font-size: 0.875rem;
+    cursor: pointer;
+    transition: all 0.2s;
+    white-space: nowrap;
+    margin-left: 1rem;
+
+    &.btn-danger {
+      background: fade(@danger, 10%);
+      color: @danger;
+      border: 1px solid fade(@danger, 20%);
+
+      &:hover {
+        background: @danger;
+        color: white;
+      }
+    }
+
+    &.btn-warning {
+      background: fade(@warning, 10%);
+      color: @warning;
+      border: 1px solid fade(@warning, 20%);
+
+      &:hover {
+        background: @warning;
+        color: white;
+      }
+    }
   }
 }
 
